# arxiv-frontpage

./: Justfile  LICENSE  README.md  index.html  main.py  pyproject.toml
.github/workflows/: build.yml  download.yml
classifier/: tree.txt
data/: tags.json
data/downloads/: 2025-04-11.jsonl  2025-04-14.jsonl  2025-04-15.jsonl  2025-04-16.jsonl  2025-04-17.jsonl  2025-04-18.jsonl  2025-04-21.jsonl  2025-04-22.jsonl  2025-04-23.jsonl  2025-04-24.jsonl  2025-04-25.jsonl  2025-04-28.jsonl  2025-04-29.jsonl  2025-04-30.jsonl  2025-05-01.jsonl  2025-05-02.jsonl  2025-05-05.jsonl  2025-05-06.jsonl  2025-05-07.jsonl  2025-05-08.jsonl  2025-05-09.jsonl  2025-05-12.jsonl  2025-05-13.jsonl  2025-05-14.jsonl  2025-05-15.jsonl  2025-05-16.jsonl  2025-05-19.jsonl  2025-05-20.jsonl  2025-05-21.jsonl  2025-05-22.jsonl  2025-05-23.jsonl  2025-05-26.jsonl  2025-05-27.jsonl  2025-05-28.jsonl  2025-05-29.jsonl  2025-05-30.jsonl  2025-06-02.jsonl  2025-06-03.jsonl  2025-06-04.jsonl  2025-06-05.jsonl  (+1 more)
data/train/: 3D.jsonl  Astronomy.jsonl  Attention.jsonl  Bayesian Optimization.jsonl  Blockchain.jsonl  Computer Vision.jsonl  Cool.jsonl  Cryptography.jsonl  Datasets.jsonl  Decision Trees.jsonl  Distributed Systems.jsonl  Evolutionary Algorithms.jsonl  Expert Iteration.jsonl  Federated Learning.jsonl  Finance.jsonl  Fuzzy Logic.jsonl  GNN.jsonl  Game Theory.jsonl  HPO and AutoML.jsonl  Hardware.jsonl  LLMs.jsonl  Math.jsonl  Medicine.jsonl  Multi-armed Bandit.jsonl  Networks.jsonl  Optimizers.jsonl  (+10 more)
src/: download.py  frontpage.py  train.py  validate.py
templates/: frontpage.html
(+2 files in other folders)
