[project]
name = "arxiv-frontpage"
version = "0.1.0"
description = "Fetches computer science papers and makes an HTML page with papers sorted by interestingness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "jinja2>=3.1.6",
    "napkinxc>=0.7.1",
    "numpy>=2.2.4",
    "pydantic>=2.11.3",
    "retry>=0.9.2",
    "rich>=14.0.0",
    "srsly>=2.5.1",
    "tqdm>=4.67.1",
    "xxhash>=3.5.0",
]
